src/test/ui/hygiene/hygienic-label-1.stderr
error[E0426]: use of undeclared label `'x`
  --> $DIR/hygienic-label-1.rs:2:19
   |
LL |     () => { break 'x; }
   |                   ^^ undeclared label `'x`
...
LL |     'x: loop { foo!() }
   |                ------ in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
